--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "choo": "^7.0.0",
+    "cutestrap": "^1.3.1",
     "es-module-shims": "^0.4.2",
     "nanohtml": "^1.8.1"
   },
@@ -28,7 +29,8 @@
     "webDependencies": [
       "choo/dist/bundle.js",
       "nanohtml",
-      "es-module-shims"
+      "es-module-shims",
+      "cutestrap/dist/css/cutestrap.css"
     ]
   }
 }
